--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ h3 {
     grid-template-columns: 65% 10% 25%;
     grid-template-rows: 50% 50%;
     padding-top: 13%;
+    position: relative;
 }
 
 .top-2 {
